# AirQualityApp

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Doxyfile  Doxyfile.in  Doxygen.lnk  LICENSE.txt  README.md  main.cpp
data/: stations.json
docs/html/: annotated.html  annotated_dup.js  api__client_8cpp.html  api__client_8cpp__incl.dot  api__client_8cpp_source.html  api__client_8hpp.html  api__client_8hpp.js  api__client_8hpp__dep__incl.dot  api__client_8hpp__incl.dot  api__client_8hpp_source.html  class_api_client-members.html  class_api_client.html  class_api_client.js  class_api_client__coll__graph.dot  class_api_client_a158be0172993d4bd4199a406cd9a2fb7_cgraph.dot  class_api_client_a4158277aaf81cd9acf1b6a474eec4460_cgraph.dot  class_api_client_a74c25a00068032e5d76caf31861f43bf_icgraph.dot  class_api_client_a85e749188e733b82d0366dfabdfa7532_cgraph.dot  class_api_client_abfea4e3ec12a59d0f7fe183418b97ac9_cgraph.dot  class_api_client_abfea4e3ec12a59d0f7fe183418b97ac9_icgraph.dot  class_main_window-members.html  class_main_window.html  class_main_window.js  class_main_window__inherit__graph.dot  class_main_window_a13c092905d507965cf15d31c5d969cd2_icgraph.dot  class_main_window_a5bf72c652108554493460d02a8a99d5b_icgraph.dot  class_main_window_a5eac5a4179901db5313ace7cc9f34076_icgraph.dot  class_main_window_a90f3bfead49040b54ddd4a3d43eecbfc_cgraph.dot  class_main_window_a90f3bfead49040b54ddd4a3d43eecbfc_icgraph.dot  class_main_window_a9388168e83016e31d2668a501450bcac_icgraph.dot  class_main_window_a985c951f47c1bcbb88af43c1ab4b4fd7_cgraph.dot  class_main_window_a996c5a2b6f77944776856f08ec30858d_cgraph.dot  class_main_window_aaf6eca17ca1d13add63fcc853d3f16cd_icgraph.dot  class_main_window_acacfa9bb4814ee9a259452621647393f_icgraph.dot  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  (+34 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_2.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  typedefs_0.js  variables_4.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js
export/: pomiary_Biała_Podlaska,_ul._Orzechowa_wszystkie_2025-04-26_23-05.json  pomiary_Bydgoszcz,_ul._Warszawska_O3_2025-04-26_15-38.json  pomiary_Bydgoszcz,_ul._Warszawska_wszystkie_2025-04-26_22-01.json  pomiary_Czerniawa_NO2_2025-04-26_16-46.json  pomiary_Czerniawa_NO2_2025-04-26_16-52.json  pomiary_Dębica,_ul.Grottgera_PM10_2025-04-26_17-30.json  pomiary_PoznaĹ„_ul._Szwajcarska_CO_2025-04-26_13-17.json  pomiary_Poznań_ul._Szwajcarska_PM2.5_2025-04-28_23-38.json  pomiary_Poznań_ul._Szwajcarska_wszystkie_2025-04-26_21-53.json  pomiary_Warszawa,_ul._Kondratowicza_NO2_2025-04-26_16-44.json  pomiary_Warszawa,_ul._Kondratowicza_NO2_2025-04-26_19-32.json  pomiary_Wrocław,_ul._Bartnicza_O3_2025-04-26_18-50.json
include/: api_client.hpp  main_window.hpp
src/: api_client.cpp  main_window.cpp
tests/: CMakeLists.txt
tests/api_client_test/: CMakeLists.txt  api_client_test.cpp
tests/station_test/: CMakeLists.txt  station_test.cpp
